# Delego

./: ARCHITECTURE.md  CONTRIBUTING.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
agents/: README.md  package.json  tsconfig.json
agents/buyer-agent/: index.ts
agents/buyer-agent/memory/: README.md
agents/buyer-agent/prompts/: system.md
agents/payment-agent/: index.ts
agents/src/: index.ts
apps/: README.md
apps/backend/: README.md
apps/backend/gateway/: README.md  tsconfig.json
apps/backend/notifications/: README.md  package.json  tsconfig.json
apps/backend/orchestrator/: README.md  package.json  tsconfig.json
apps/backend/payments/: README.md  package.json  tsconfig.json
apps/backend/wallet/: README.md  package.json  tsconfig.json
apps/frontend/: README.md  next.config.ts  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/components/: README.md
apps/frontend/hooks/: useDelegations.ts
apps/frontend/lib/: api.ts
apps/frontend/services/: README.md
apps/frontend/styles/: globals.css
contracts/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: integration_tests.rs  lib.rs  test.rs
contracts/permissions/: Cargo.toml
contracts/permissions/src/: integration_tests.rs  lib.rs  test.rs
contracts/tests/: Cargo.toml  cross_contract.rs
docs/: contributor-guide.md
docs/architecture/: system-design.md
services/wallet/src/: spendLimits.ts
tests/integration/src/: payments-escrow.testnet.test.js
tests/unit/src/: auth.test.js  payments-validation.test.js  (+5 more)
(+22 files in other folders)
